infra/k8s/onboarding/suminOnboarding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: week2-restaurants
  namespace: onboarding
spec:
  selector:
    app: week2-restaurants
  ports:
    - port: 80
      targetPort: 3000
